cloudformation/environment/ec2/estudo-vpn.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "EC2 Template",
  "Resources": {
    "MyEC2SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group for MyEC2Instance",
        "VpcId": "vpc-0b68a2d5afd7b3924",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": 943,
            "ToPort": 943,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 945,
            "ToPort": 945,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22,
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "udp",
            "FromPort": 1194,
            "ToPort": 1194,
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "dev-vpn-sg"
          }
        ]
      }
    },
    "MyEC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": "t2.medium",
        "ImageId": "ami-0bd9edd5984a812dc",
        "KeyName": "chave-ssh",
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/sda1",
            "Ebs": {
              "VolumeSize": 20
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "dev-vpn"
          },
          {
            "Key": "Domain",
            "Value": "E-fluxus"
          },
          {
            "Key": "Environment",
            "Value": "dev"
          }
        ],
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "SubnetId": "subnet-07097346e301a829b",
            "GroupSet": [{ "Ref": "MyEC2SecurityGroup" }]
          }
        ]
      }
    }
  }
}
